# hatch-timestamp-version

./: .cruft.json  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codespell.txt  demo.tape  pyproject.toml
.github/workflows/: main.yml  vhs.yml
hatch_timestamp_version/: __init__.py  _version.py  exceptions.py  hooks.py  ts_scheme.py
hatch_timestamp_version/ts_plugin/: hooks.py
tests/: test_hatch_timestamp_version.py  test_hooks.py  test_hts.py
