[project]
name = "hatch-timestamp-version"
dynamic = ["version"]
description = "plugin that provides a custom version scheme using UTC timestamps for development versions."
authors = [{ name = "Visesh Prasad", email = "viseshrprasad@gmail.com" }]
readme = "README.md"
keywords = ["python"]
requires-python = ">=3.9,<4.0"
dependencies = [
    "packaging>=25.0",
    "hatchling>=1.1.0",
    "hatch-vcs>=0.4.0",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hatch",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/viseshrp/hatch-timestamp-version"
Repository = "https://github.com/viseshrp/hatch-timestamp-version"
Documentation = "https://github.com/viseshrp/hatch-timestamp-version/blob/main/README.md"
Changelog = "https://github.com/viseshrp/hatch-timestamp-version/blob/main/CHANGELOG.md"
Bug-Tracker = "https://github.com/viseshrp/hatch-timestamp-version/issues"
CI = "https://github.com/viseshrp/hatch-timestamp-version/actions"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "uv>=0.6.17",
    "tox>=4.25.0",
    "tox-uv>=1.25.0",
    "tox-gh-actions>=3.3.0",
    "mypy>=1.15.0",
    "deptry>=0.23.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "vulture>=2.14",
    "twine>=6.1.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.entry-points.hatch]
timestamp-dev = "hatch_timestamp_version.hooks"

[tool.hatch.version]
source = "vcs"
path = "hatch_timestamp_version/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"

[tool.hatch.build.targets.wheel]
packages = ["hatch_timestamp_version"]

[tool.hatch.build.targets.editable]
packages = ["hatch_timestamp_version"]

[tool.uv]
default-groups = "all"

[tool.mypy]
files = [
    "hatch_timestamp_version"
]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
testpaths = ["tests"]
addopts = "--capture=tee-sys --tb=native -p no:warnings -ra -vv"
markers = [
    "integration:Run integration tests",
    "smoke:Run the smoke tests",
    "unit:Run the unit tests",
]
norecursedirs = [
    ".git",
    ".idea",
]
filterwarnings = [
    "ignore:.+:DeprecationWarning"
]

# Configuration for coverage.py
[tool.coverage.report]
show_missing = true
skip_covered = true
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
branch = true
omit = ["hatch_timestamp_version/__main__.py"]
source = [
    "hatch_timestamp_version"
]

[tool.coverage.html]
show_contexts = true

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".venv", "__init__.py"]
fix = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort (keep this if you want Ruff to sort imports)
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pep8-naming rules
    "N",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff-native rules
    "RUF",
    # try/except linting
    "TRY",
    # Disallow print statements
    "T201",
]
ignore = [
    "C901", # Function is too complex
    "PGH003" # blanket-type-ignore
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["hatch_timestamp_version", "tests"]
force-sort-within-sections = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.codespell]
ignore-words = "codespell.txt"
skip = '*.pyc,*.xml,*.gif,*.png,*.jpg,*.js,*.html,*.json,*.gz,Makefile'
quiet-level = 3

[tool.bandit]
targets = ["hatch_timestamp_version", ]
exclude_dirs = ["venv/*", ".venv/*", "tests/*"]

[tool.deptry]
exclude = ["venv/.*", ".venv/.*", "tests/.*"]

[tool.vulture]
paths = ["hatch_timestamp_version", "tests"]
min_confidence = 80
sort_by_size = true
exclude = ["venv/", ".venv/"]

[tool.pre-commit.default_language_versions]
python = "3.13"
